--- a/package.json
+++ b/package.json
@@ -7,12 +7,40 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "db:types": "supabase gen types typescript --project-id your-project-id > src/lib/types/database.ts"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.54.0",
+    "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.539.0",
+    "next": "^14.2.31",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-day-picker": "^9.8.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
+    "swr": "^2.3.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
@@ -22,6 +50,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
+    "supabase": "^2.33.9",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
