--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.539.0",
+    "nanoid": "^5.1.5",
     "next": "^14.2.31",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.1",
