--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "db:types": "supabase gen types typescript --project-id your-project-id > src/lib/types/database.ts"
+    "db:types": "supabase gen types typescript --project-id your-project-id > src/lib/types/database.ts",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:install": "playwright install"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -48,6 +52,7 @@
     "zod": "^4.0.16"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
